--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.5.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-custom-back-to-top-button": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
